--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,7 +27,9 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_launcher_icons: "^0.7.0"
+  flutter_launcher_icons: ^0.7.0
+  firebase_auth: ^0.14.0+5
+  firebase_database: ^3.0.7
 
 
 flutter_icons:
