--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,8 @@ dev_dependencies:
   flutter_launcher_icons: ^0.7.0
   firebase_auth: ^0.14.0+5
   firebase_database: ^3.0.7
+  shared_preferences: ^0.5.7+3
+
 
 
 flutter_icons:
