--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,14 @@ dev_dependencies:
   firebase_auth: ^0.14.0+5
   firebase_database: ^3.0.7
   shared_preferences: ^0.5.7+3
+  cloud_firestore: ^0.13.5
+  image_picker: ^0.6.6+5
+  firebase_storage: ^3.1.6
+  intl: ^0.16.1
+
+
+
+
 
 
 
